--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>hello wordl</title>
-    <script data-goatcounter="https://hellowordl.goatcounter.com/count"
+    <script data-goatcounter="https://famdl.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
   </head>
   <body>
